# axaremote.py

./: README.md  pyproject.toml
axaremote/: __init__.py  __main__.py  axaconnection.py  axaremote.py
tests/: __init__.py  settings.json  test_AXARemote.py  test_AXARemoteTelnet.py  test_axaremote_serial.py  test_axaremote_telnet.py
